# scageclock

./: .gitignore  README.md  pyproject.toml  run_pytest.sh  run_scAgeClock_CLI.sh
data/example/data_formatting/obs_columns_matching_examples/: assay_matching_table.xlsx  cell_type_matching_table.xlsx  sex_matching_table.xlsx  tissue_matching_table.xlsx
data/metadata/: CZCELLxGENE_Genes_Selected.tsv  CZCELLxGENE_ProteinCodingGenes_Selected.tsv  h5ad_var.tsv
data/metadata/categorical_features_index/: assay_numeric_index.tsv  cell_type_numeric_index.tsv  sex_numeric_index.tsv  tissue_general_numeric_index.tsv
data/pytest_data/: pytest_dataset_metadata.parquet
data/pytest_data/.ipynb_checkpoints/: get_pytest_data_meta-checkpoint.ipynb
data/pytest_data/k_fold_mode/train_val/Fold1/: get_fold1.py
data/pytest_data/k_fold_mode/train_val/Fold2/: get_fold2.py
data/pytest_data/k_fold_mode/train_val/Fold3/: Pytest_Fold3_200K_chunk1.h5ad  link.sh
data/pytest_data/train_val_test_mode/: h5ad_var.tsv  index.ipynb  index_train.parquet  link_var_file.sh
data/pytest_data/train_val_test_mode/test/: link.sh
data/pytest_data/train_val_test_mode/train/: Pytest_Fold1_200K_chunk27.h5ad
scageclock/: dataloader.py  evaluation.py  formatting.py  h5ad_dataloader.py  h5ad_sampler.py  prepare_inputs.py  scAgeClock.py  scageclock.py  utility.py  visualization.py
scageclock/model/: CatBoost.py  GatedMultiheadAttention.py  Linear.py  MLP.py  XGBoost.py  catboost.py  linear.py  mlp.py  xgboost.py
tests/: conftest.py  test_CatBoost.py  test_GMA.py  test_XGBoost.py  test_evaluation.py  test_linear.py  test_scAgeClock.py
tmp/tests_scripts_candidates/: test_GMA.py  test_MLP.py
