[tool.poetry]
name = "scageclock"
version = "0.1.1"
description = "scAgeClock: a single-cell human aging clock model based on gated multi-head attention neural networks and single-cell transcriptome"
authors = ["Gangcai Xie <gcxiester@gmail.com>"]
readme = "README.md"
packages = [
    {include = "scageclock"}
]

[tool.poetry.dependencies]
python = "^3.12"
torch = ">=2.6.0, <2.7.0"
scanpy = "~1.10.4"
xgboost = "~2.1.2"
catboost = "~1.2.7"
numpy = "~1.26.4"
pandas = "~2.2.2"
matplotlib = "~3.9.2"
pyarrow = "~20.0.0"
openpyxl = "~3.1.5"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
ipython = "^9.3.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.poetry.scripts]
scAgeClock = "scageclock.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
